# cloud-storage-job-runner

./: Cargo.toml  README.md  example-config.yaml
src/: bucket.rs  errors.rs  lib.rs  main.rs  pretty_print.rs  shell.rs  step_runner.rs
src/bucket/: gcp.rs  mod.rs
src/step_runner/: mod.rs  shell.rs
tests/: shell_step_runner.rs
tests/common/: mod.rs
