[package]
name = "cloud-storage-job-runner"
version = "0.1.0"
edition = "2021"
authors = ["Nick Chaloult <nchaloult.com>"]
description = """
A simple tool for downloading files from a storage bucket in the cloud,
running a job on each of them, and uploading the results back to the
cloud.
"""

[[bin]]
name = "csjr"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.53"
cloud-storage = "0.11.0"
mime_guess = "2.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
structopt = "0.3.26"
termcolor = "1.1.3"
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = "0.1"
